deployment-django.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-app
        image: aswinvilasp/django_app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
