deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-application
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-application
        image: aswinvilasp/flask_app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
