deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-webserver
  template:
    metadata:
      labels: 
        app: nginx-webserver
    spec:
      containers: 
      - name: nginx-web
        image: aswinvilasp/nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
