service-nginx.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginxweb-service
spec:
  selector:
    app: nginx-webserver
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
